# pgmaker

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.d4a3583  README.md  README.md.backup  pgmaker.qrc
.cache/clangd/index/: _fixes.hpp.99FA001E4A0F8D8C.idx  _vectorize.hpp.CE52BC06ED0A8790.idx  channel.cpp.60D9751DDF4BD1CE.idx  channel.h.942BEE8F13F6D5E5.idx  clip.cpp.6033CEA680B9306E.idx  clip.h.58C5D5BA2B756E68.idx  common.hpp.6FF62E4861F885DE.idx  compute_common.hpp.638D1540E17B95FA.idx  compute_vector_relational.hpp.0B42E1F6F5F780BE.idx  constants.hpp.D2F5E79918865D76.idx  constants.inl.F14EBB31A44E07F3.idx  epsilon.hpp.80FFF2BDF7A5C180.idx  epsilon.inl.FB3C7E2E6161C590.idx  exponential.hpp.455AA59E5E3FF42B.idx  func_common.inl.2EA651A60372E7FA.idx  func_exponential.inl.4615826FA1554D47.idx  func_geometric.inl.EA1E3CEA4B69CE64.idx  func_integer.inl.82068524B6F4E63C.idx  func_matrix.inl.711FA25FF4D2428F.idx  func_packing.inl.C2D8652503E4AEC5.idx  func_trigonometric.inl.8AB641BADA241D3D.idx  func_vector_relational.inl.67C1FF0764F4708F.idx  fwd.hpp.3545C47D6232621C.idx  geometric.hpp.7E53473CBC84EEF1.idx  glad.c.CB319C8CD50CB319.idx  glad.h.5A42E898CFC2E726.idx  glm.hpp.166177ED49810B3C.idx  integer.hpp.092B373388F4576A.idx  khrplatform.h.2B08EBE1BA3F9A0A.idx  main.cpp.5E77D04EA7399C74.idx  main.cpp.956B641E872CE4D1.idx  mat2x2.hpp.5E940F9F169ECF53.idx  mat2x3.hpp.777BC381C2EBCF1D.idx  mat2x4.hpp.C3FAB10370DA000F.idx  mat3x2.hpp.56E3EEFA4F0D5773.idx  mat3x3.hpp.179968CF94366114.idx  mat3x4.hpp.EC97A2AF82A44D0C.idx  mat4x2.hpp.44E1B301F5D11EFE.idx  mat4x3.hpp.5233DCAAB29CE4FF.idx  mat4x4.hpp.FA4EE4C4AE20283D.idx  (+162 more)
lib/imgui/: CMakeLists.txt
libpgmaker/: CMakeLists.txt
libpgmaker/include/libpgmaker/: channel.h  clip.h  effect.h  id_generator.h  pg_types.h  preview.h  project_settings.h  spsc_queue.h  textureGL.h  timeline.h  tsqueue.h  video.h  video_reader.h
libpgmaker/lib/glad/: CMakeLists.txt
libpgmaker/lib/glad/include/glad/: glad.h
libpgmaker/lib/glad/src/: glad.c
libpgmaker/lib/glad2/: CMakeLists.txt
libpgmaker/lib/glad2/include/glad/: glad.h
libpgmaker/lib/glad2/src/: glad.c
libpgmaker/sandbox/: main.cpp
libpgmaker/src/: channel.cpp  clip.cpp  effect.cpp  pg_types.cpp  preview.cpp  textureGL.cpp  timeline.cpp  video.cpp  video_reader.cpp
src/: activevideos.cpp  activevideos.h  application_base.h  backendintegration.cpp  backendintegration.h  cmain_menu.cpp  cmain_menu.h  cnode_editor.cpp  cnode_editor.h  command_handler.h  cplayback.cpp  cplayback.h  cproperties.cpp  cproperties.h  ctimeline.cpp  ctimeline.h  cvideos.cpp  cvideos.h  events.h  fbitem.cpp  fbitem.h  lua_binding.cpp  lua_binding.h  lua_grayscale.lua  main.cpp  main_application.cpp  main_application.h  main_menu_panel.cpp  main_menu_panel.h  node_editor_panel.cpp  node_editor_panel.h  panel.h  playback_panel.cpp  playback_panel.h  project.cpp  project.h  project_creator.cpp  project_creator.h  properties_panel.cpp  properties_panel.h  (+16 more)
src/NodeEditor/: BezierCurve.h  Block.h  BlockEditor.h  Circle.h  FilterBlock.h  InputBlock.h  OutputBlock.h
src/node_editor/: block_editor.cpp  block_editor.h
src/qml/: MainWindow.qml  MyButton.qml  MyButton.qml.autosave  TaskBarButton.qml  main.qml
